--- a/spec/config.yml
+++ b/spec/config.yml
@@ -1,4 +1,3 @@
-host: 'http://localhost:3000/'
+host: 'http://localhost:3000'
 project: 'project_name'
-username: 'username'
-password: 'password'
+api_key:  'api_key'
