Add support for bitbucket links

--- a/.gitmine.yml
+++ b/.gitmine.yml
@@ -1,2 +1,3 @@
-host:     'http://redmine-gitmine.heroku.com'
-github:   'pcreux/gitmine'
+host:      'http://redmine-gitmine.heroku.com'
+github:    'pcreux/gitmine'
+bitbucket: 'davidcollom/paasmaker'
